Fix width of panel-content to scroll content on mobile devices

--- a/css/app.css
+++ b/css/app.css
@@ -38,7 +38,7 @@ body {
   display: block;
   height: 100%;
   pointer-events: none;
-  width: 100%;
+  width: 624px;
 }
 
 .panel.hide {
